force-app/main/default/objects/Payment_Request_POP_Transactions__c/Payment_Request_POP_Transactions__c.object-meta.xml
<CustomObject>
    <label>Payment Request POP Transactions</label>
    <nameField>
        <displayFormat>POP-{00000000}</displayFormat>
        <label>Payment Request POP Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Request POP Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>