force-app/main/default/objects/Payment_Request_POP_Transactions__c/fields/acquirerCode__c.field-meta.xml
<CustomField>
    <fullName>acquirerCode__c</fullName>
    <label>acquirerCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>