force-app/main/default/objects/Payment_Request_POP_Transactions__c/fields/amount__c.field-meta.xml
<CustomField>
    <fullName>amount__c</fullName>
    <label>amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>