force-app/main/default/objects/Payment_Request_POP_Transactions__c/fields/cardLastFourDigit__c.field-meta.xml
<CustomField>
    <fullName>cardLastFourDigit__c</fullName>
    <label>cardLastFourDigit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>