force-app/main/default/objects/Payment_Request_POP_Transactions__c/fields/cardType__c.field-meta.xml
<CustomField>
    <fullName>cardType__c</fullName>
    <label>cardType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>