force-app/main/default/objects/Payment_Request_POP_Transactions__c/fields/customerName__c.field-meta.xml
<CustomField>
    <fullName>customerName__c</fullName>
    <label>customerName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>