force-app/main/default/objects/Payment_Request_POP_Transactions__c/fields/errorMessage__c.field-meta.xml
<CustomField>
    <fullName>errorMessage__c</fullName>
    <label>errorMessage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>