force-app/main/default/objects/Payment_Request_POP_Transactions__c/fields/formattedPan__c.field-meta.xml
<CustomField>
    <fullName>formattedPan__c</fullName>
    <label>formattedPan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>