force-app/main/default/objects/Payment_Request_POP_Transactions__c/fields/invoiceNumber__c.field-meta.xml
<CustomField>
    <fullName>invoiceNumber__c</fullName>
    <label>invoiceNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>