force-app/main/default/objects/Payment_Request_POP_Transactions__c/fields/Message_Code__c.field-meta.xml
<CustomField>
    <fullName>Message_Code__c</fullName>
    <label>Message Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>