force-app/main/default/objects/Payment_Request_POP_Transactions__c/fields/mid__c.field-meta.xml
<CustomField>
    <fullName>mid__c</fullName>
    <label>mid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>