force-app/main/default/objects/Payment_Request_POP_Transactions__c/fields/orderNumber__c.field-meta.xml
<CustomField>
    <fullName>orderNumber__c</fullName>
    <label>orderNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>