force-app/main/default/objects/Payment_Request_POP_Transactions__c/fields/P2PRequestId__c.field-meta.xml
<CustomField>
    <fullName>P2PRequestId__c</fullName>
    <label>P2PRequestId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>