force-app/main/default/objects/Payment_Request_POP_Transactions__c/fields/paymentCardType__c.field-meta.xml
<CustomField>
    <fullName>paymentCardType__c</fullName>
    <label>paymentCardType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>