force-app/main/default/objects/Payment_Request_POP_Transactions__c/fields/pgInvoiceNumber__c.field-meta.xml
<CustomField>
    <fullName>pgInvoiceNumber__c</fullName>
    <label>pgInvoiceNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>