force-app/main/default/objects/Payment_Request_POP_Transactions__c/fields/receiptUrl__c.field-meta.xml
<CustomField>
    <fullName>receiptUrl__c</fullName>
    <label>receiptUrl</label>
    <type>Url</type>
</CustomField>