force-app/main/default/objects/Payment_Request_POP_Transactions__c/fields/reverseReferenceNumber__c.field-meta.xml
<CustomField>
    <fullName>reverseReferenceNumber__c</fullName>
    <label>reverseReferenceNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>