force-app/main/default/objects/Payment_Request_POP_Transactions__c/fields/rrNumber__c.field-meta.xml
<CustomField>
    <fullName>rrNumber__c</fullName>
    <label>rrNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>