force-app/main/default/objects/Payment_Request_POP_Transactions__c/fields/sessionKey__c.field-meta.xml
<CustomField>
    <fullName>sessionKey__c</fullName>
    <label>sessionKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>