force-app/main/default/objects/Payment_Request_POP_Transactions__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>INITIATED</fullName>
            </value>
            <value>
                <fullName>AUTHORIZED</fullName>
            </value>
            <value>
                <fullName>FAILED</fullName>
            </value>
            <value>
                <fullName>CANCELED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>