force-app/main/default/objects/Payment_Request_POP_Transactions__c/fields/txnId__c.field-meta.xml
<CustomField>
    <fullName>txnId__c</fullName>
    <label>txnId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>